{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 143,
  "lineage": "92002934-2e83-0ef0-3c0f-65ce8fbe5688",
  "resources": [
    {
      "module": "module.nic",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/networkInterfaces/m-k8s-nic",
            "internal_domain_name_suffix": "yf15qq2lfyiuxdadislo2aef4b.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.100",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/publicIPAddresses/m-k8s-pip",
                "subnet_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/virtualNetworks/k8s-VNet01/subnets/k8s-Subnet01"
              }
            ],
            "location": "koreacentral",
            "mac_address": "00-22-48-CC-32-6E",
            "name": "m-k8s-nic",
            "private_ip_address": "10.0.0.100",
            "private_ip_addresses": [
              "10.0.0.100"
            ],
            "resource_group_name": "test-k8s",
            "virtual_machine_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Compute/virtualMachines/m-k8s"
          },
          "dependencies": [
            "module.pip.azurerm_public_ip.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/networkInterfaces/w1-k8s-nic",
            "internal_domain_name_suffix": "yf15qq2lfyiuxdadislo2aef4b.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.101",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/publicIPAddresses/w1-k8s-pip",
                "subnet_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/virtualNetworks/k8s-VNet01/subnets/k8s-Subnet01"
              }
            ],
            "location": "koreacentral",
            "mac_address": "00-22-48-CC-31-5C",
            "name": "w1-k8s-nic",
            "private_ip_address": "10.0.0.101",
            "private_ip_addresses": [
              "10.0.0.101"
            ],
            "resource_group_name": "test-k8s",
            "virtual_machine_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Compute/virtualMachines/w1-k8s"
          },
          "dependencies": [
            "module.pip.azurerm_public_ip.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/networkInterfaces/w2-k8s-nic",
            "internal_domain_name_suffix": "yf15qq2lfyiuxdadislo2aef4b.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.102",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/publicIPAddresses/w2-k8s-pip",
                "subnet_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/virtualNetworks/k8s-VNet01/subnets/k8s-Subnet01"
              }
            ],
            "location": "koreacentral",
            "mac_address": "00-22-48-05-8A-62",
            "name": "w2-k8s-nic",
            "private_ip_address": "10.0.0.102",
            "private_ip_addresses": [
              "10.0.0.102"
            ],
            "resource_group_name": "test-k8s",
            "virtual_machine_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Compute/virtualMachines/w2-k8s"
          },
          "dependencies": [
            "module.pip.azurerm_public_ip.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/networkInterfaces/w3-k8s-nic",
            "internal_domain_name_suffix": "yf15qq2lfyiuxdadislo2aef4b.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.103",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/publicIPAddresses/w3-k8s-pip",
                "subnet_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/virtualNetworks/k8s-VNet01/subnets/k8s-Subnet01"
              }
            ],
            "location": "koreacentral",
            "mac_address": "00-22-48-CC-38-93",
            "name": "w3-k8s-nic",
            "private_ip_address": "10.0.0.103",
            "private_ip_addresses": [
              "10.0.0.103"
            ],
            "resource_group_name": "test-k8s",
            "virtual_machine_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Compute/virtualMachines/w3-k8s"
          },
          "dependencies": [
            "module.pip.azurerm_public_ip.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-NSG01",
            "location": "koreacentral",
            "name": "k8s-NSG01",
            "resource_group_name": "test-k8s",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port-tcp-22",
                "priority": 100,
                "protocol": "tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port-tcp-80",
                "priority": 110,
                "protocol": "tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-NSG01/securityRules/port-tcp-22",
            "name": "port-tcp-22",
            "network_security_group_name": "k8s-NSG01",
            "priority": 100,
            "protocol": "tcp",
            "resource_group_name": "test-k8s",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg.azurerm_network_security_group.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-NSG01/securityRules/port-tcp-80",
            "name": "port-tcp-80",
            "network_security_group_name": "k8s-NSG01",
            "priority": 110,
            "protocol": "tcp",
            "resource_group_name": "test-k8s",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg.azurerm_network_security_group.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_subnet_set",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/virtualNetworks/k8s-VNet01/subnets/k8s-Subnet01",
            "network_security_group_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-NSG01",
            "subnet_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/virtualNetworks/k8s-VNet01/subnets/k8s-Subnet01"
          },
          "dependencies": [
            "module.nsg.azurerm_network_security_group.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.pip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "m-k8s-pip",
            "fqdn": "m-k8s-pip.koreacentral.cloudapp.azure.com",
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/publicIPAddresses/m-k8s-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.214.92.206",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "m-k8s-pip",
            "resource_group_name": "test-k8s",
            "sku": "Standard"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "w1-k8s-pip",
            "fqdn": "w1-k8s-pip.koreacentral.cloudapp.azure.com",
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/publicIPAddresses/w1-k8s-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.214.92.221",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "w1-k8s-pip",
            "resource_group_name": "test-k8s",
            "sku": "Standard"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "w2-k8s-pip",
            "fqdn": "w2-k8s-pip.koreacentral.cloudapp.azure.com",
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/publicIPAddresses/w2-k8s-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.214.92.209",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "w2-k8s-pip",
            "resource_group_name": "test-k8s",
            "sku": "Standard"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "w3-k8s-pip",
            "fqdn": "w3-k8s-pip.koreacentral.cloudapp.azure.com",
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/publicIPAddresses/w3-k8s-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.214.92.198",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "w3-k8s-pip",
            "resource_group_name": "test-k8s",
            "sku": "Standard"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/16",
            "address_prefixes": [
              "10.0.0.0/16"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/virtualNetworks/k8s-VNet01/subnets/k8s-Subnet01",
            "name": "k8s-Subnet01",
            "resource_group_name": "test-k8s",
            "virtual_network_name": "k8s-VNet01"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/8"
            ],
            "guid": "43f877c1-2e8b-4b11-8c03-4496ee0085f1",
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/virtualNetworks/k8s-VNet01",
            "location": "koreacentral",
            "name": "k8s-VNet01",
            "resource_group_name": "test-k8s",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/16",
                "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/virtualNetworks/k8s-VNet01/subnets/k8s-Subnet01",
                "name": "k8s-Subnet01",
                "security_group": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-k8s/providers/Microsoft.Network/networkSecurityGroups/k8s-NSG01"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    }
  ]
}